python/versioned_docs/version-1.12/api/class-frame.mdx
---
id: class-frame
title: "Frame"
---
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

At every point of time, page exposes its current frame tree via the [page.main_frame](./api/class-page.mdx#page-main-frame) and [frame.child_frames](./api/class-frame.mdx#frame-child-frames) methods.

[Frame] object's lifecycle is controlled by three events, dispatched on the page object:
* [page.on("frameattached")](./api/class-page.mdx#page-event-frame-attached) - fired when the frame gets attached to the page. A Frame can be attached to the page only once.
* [page.on("framenavigated")](./api/class-page.mdx#page-event-frame-navigated) - fired when the frame commits navigation to a different URL.
* [page.on("framedetached")](./api/class-page.mdx#page-event-frame-detached) - fired when the frame gets detached from the page.  A Frame can be detached from the page only once.

An example of dumping frame tree:

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
from playwright.sync_api import sync_playwright

def run(playwright):
    firefox = playwright.firefox
    browser = firefox.launch()
    page = browser.new_page()
    page.goto("https://www.theverge.com")
    dump_frame_tree(page.main_frame, "")
    browser.close()

def dump_frame_tree(frame, indent):
    print(indent + frame.name + '@' + frame.url)
    for child in frame.child_frames:
        dump_frame_tree(child, indent + "    ")

with sync_playwright() as playwright:
    run(playwright)
```

</TabItem>
<TabItem value="async">

```py
import asyncio
from playwright.async_api import async_playwright

async def run(playwright):
    firefox = playwright.firefox
    browser = await firefox.launch()
    page = await browser.new_page()
    await page.goto("https://www.theverge.com")
    dump_frame_tree(page.main_frame, "")
    await browser.close()

def dump_frame_tree(frame, indent):
    print(indent + frame.name + '@' + frame.url)
    for child in frame.child_frames:
        dump_frame_tree(child, indent + "    ")

async def main():
    async with async_playwright() as playwright:
        await run(playwright)
asyncio.run(main())
```

</TabItem>
</Tabs>


- [frame.add_script_tag(**kwargs)](./api/class-frame.mdx#frame-add-script-tag)
- [frame.add_style_tag(**kwargs)](./api/class-frame.mdx#frame-add-style-tag)
- [frame.check(selector, **kwargs)](./api/class-frame.mdx#frame-check)
- [frame.child_frames](./api/class-frame.mdx#frame-child-frames)
- [frame.click(selector, **kwargs)](./api/class-frame.mdx#frame-click)
- [frame.content()](./api/class-frame.mdx#frame-content)
- [frame.dblclick(selector, **kwargs)](./api/class-frame.mdx#frame-dblclick)
- [frame.dispatch_event(selector, type, **kwargs)](./api/class-frame.mdx#frame-dispatch-event)
- [frame.eval_on_selector(selector, expression, **kwargs)](./api/class-frame.mdx#frame-eval-on-selector)
- [frame.eval_on_selector_all(selector, expression, **kwargs)](./api/class-frame.mdx#frame-eval-on-selector-all)
- [frame.evaluate(expression, **kwargs)](./api/class-frame.mdx#frame-evaluate)
- [frame.evaluate_handle(expression, **kwargs)](./api/class-frame.mdx#frame-evaluate-handle)
- [frame.expect_navigation(**kwargs)](./api/class-frame.mdx#frame-wait-for-navigation)
- [frame.fill(selector, value, **kwargs)](./api/class-frame.mdx#frame-fill)
- [frame.focus(selector, **kwargs)](./api/class-frame.mdx#frame-focus)
- [frame.frame_element()](./api/class-frame.mdx#frame-frame-element)
- [frame.get_attribute(selector, name, **kwargs)](./api/class-frame.mdx#frame-get-attribute)
- [frame.goto(url, **kwargs)](./api/class-frame.mdx#frame-goto)
- [frame.hover(selector, **kwargs)](./api/class-frame.mdx#frame-hover)
- [frame.inner_html(selector, **kwargs)](./api/class-frame.mdx#frame-inner-html)
- [frame.inner_text(selector, **kwargs)](./api/class-frame.mdx#frame-inner-text)
- [frame.is_checked(selector, **kwargs)](./api/class-frame.mdx#frame-is-checked)
- [frame.is_detached()](./api/class-frame.mdx#frame-is-detached)
- [frame.is_disabled(selector, **kwargs)](./api/class-frame.mdx#frame-is-disabled)
- [frame.is_editable(selector, **kwargs)](./api/class-frame.mdx#frame-is-editable)
- [frame.is_enabled(selector, **kwargs)](./api/class-frame.mdx#frame-is-enabled)
- [frame.is_hidden(selector, **kwargs)](./api/class-frame.mdx#frame-is-hidden)
- [frame.is_visible(selector, **kwargs)](./api/class-frame.mdx#frame-is-visible)
- [frame.name](./api/class-frame.mdx#frame-name)
- [frame.page](./api/class-frame.mdx#frame-page)
- [frame.parent_frame](./api/class-frame.mdx#frame-parent-frame)
- [frame.press(selector, key, **kwargs)](./api/class-frame.mdx#frame-press)
- [frame.query_selector(selector)](./api/class-frame.mdx#frame-query-selector)
- [frame.query_selector_all(selector)](./api/class-frame.mdx#frame-query-selector-all)
- [frame.select_option(selector, **kwargs)](./api/class-frame.mdx#frame-select-option)
- [frame.set_content(html, **kwargs)](./api/class-frame.mdx#frame-set-content)
- [frame.set_input_files(selector, files, **kwargs)](./api/class-frame.mdx#frame-set-input-files)
- [frame.tap(selector, **kwargs)](./api/class-frame.mdx#frame-tap)
- [frame.text_content(selector, **kwargs)](./api/class-frame.mdx#frame-text-content)
- [frame.title()](./api/class-frame.mdx#frame-title)
- [frame.type(selector, text, **kwargs)](./api/class-frame.mdx#frame-type)
- [frame.uncheck(selector, **kwargs)](./api/class-frame.mdx#frame-uncheck)
- [frame.url](./api/class-frame.mdx#frame-url)
- [frame.wait_for_function(expression, **kwargs)](./api/class-frame.mdx#frame-wait-for-function)
- [frame.wait_for_load_state(**kwargs)](./api/class-frame.mdx#frame-wait-for-load-state)
- [frame.wait_for_selector(selector, **kwargs)](./api/class-frame.mdx#frame-wait-for-selector)
- [frame.wait_for_timeout(timeout)](./api/class-frame.mdx#frame-wait-for-timeout)
- [frame.wait_for_url(url, **kwargs)](./api/class-frame.mdx#frame-wait-for-url)

## frame.add_script_tag(**kwargs) {#frame-add-script-tag}
- `content` &#60;[str]&#62; Raw JavaScript content to be injected into frame.
- `path` &#60;[Union]\[[str], [pathlib.Path]\]&#62; Path to the JavaScript file to be injected into frame. If `path` is a relative path, then it is resolved relative to the current working directory.
- `type` &#60;[str]&#62; Script type. Use 'module' in order to load a Javascript ES6 module. See [script](https://developer.mozilla.org/en-US/docs/Web/HTML/Element/script) for more details.
- `url` &#60;[str]&#62; URL of a script to be added.
- returns: &#60;[ElementHandle]&#62;

Returns the added tag when the script's onload fires or when the script content was injected into frame.

Adds a `<script>` tag into the page with the desired url or content.

## frame.add_style_tag(**kwargs) {#frame-add-style-tag}
- `content` &#60;[str]&#62; Raw CSS content to be injected into frame.
- `path` &#60;[Union]\[[str], [pathlib.Path]\]&#62; Path to the CSS file to be injected into frame. If `path` is a relative path, then it is resolved relative to the current working directory.
- `url` &#60;[str]&#62; URL of the `<link>` tag.
- returns: &#60;[ElementHandle]&#62;

Returns the added tag when the stylesheet's onload fires or when the CSS content was injected into frame.

Adds a `<link rel="stylesheet">` tag into the page with the desired url or a `<style type="text/css">` tag with the content.

## frame.check(selector, **kwargs) {#frame-check}
- `selector` &#60;[str]&#62; A selector to search for element. If there are multiple elements satisfying the selector, the first will be used. See [working with selectors](./selectors.mdx) for more details.
- `force` &#60;[bool]&#62; Whether to bypass the [actionability](./actionability.mdx) checks. Defaults to `false`.
- `no_wait_after` &#60;[bool]&#62; Actions that initiate navigations are waiting for these navigations to happen and for pages to start loading. You can opt out of waiting via setting this flag. You would only need this option in the exceptional cases such as navigating to inaccessible pages. Defaults to `false`.
- `position` &#60;[Dict]&#62; A point to use relative to the top-left corner of element padding box. If not specified, uses some visible point of the element.
  - `x` &#60;[float]&#62;
  - `y` &#60;[float]&#62;
- `timeout` &#60;[float]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [browser_context.set_default_timeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [page.set_default_timeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.
- `trial` &#60;[bool]&#62; When set, this method only performs the [actionability](./actionability.mdx) checks and skips the action. Defaults to `false`. Useful to wait until the element is ready for the action without performing it.
- returns: &#60;[NoneType]&#62;

This method checks an element matching `selector` by performing the following steps:
1. Find an element matching `selector`. If there is none, wait until a matching element is attached to the DOM.
1. Ensure that matched element is a checkbox or a radio input. If not, this method throws. If the element is already checked, this method returns immediately.
1. Wait for [actionability](./actionability.mdx) checks on the matched element, unless `force` option is set. If the element is detached during the checks, the whole action is retried.
1. Scroll the element into view if needed.
1. Use [page.mouse](./api/class-page.mdx#page-mouse) to click in the center of the element.
1. Wait for initiated navigations to either succeed or fail, unless `no_wait_after` option is set.
1. Ensure that the element is now checked. If not, this method throws.

When all steps combined have not finished during the specified `timeout`, this method throws a [TimeoutError]. Passing zero timeout disables this.

## frame.child_frames {#frame-child-frames}
- returns: &#60;[List]\[[Frame]\]&#62;

## frame.click(selector, **kwargs) {#frame-click}
- `selector` &#60;[str]&#62; A selector to search for element. If there are multiple elements satisfying the selector, the first will be used. See [working with selectors](./selectors.mdx) for more details.
- `button` &#60;"left"|"right"|"middle"&#62; Defaults to `left`.
- `click_count` &#60;[int]&#62; defaults to 1. See [UIEvent.detail].
- `delay` &#60;[float]&#62; Time to wait between `mousedown` and `mouseup` in milliseconds. Defaults to 0.
- `force` &#60;[bool]&#62; Whether to bypass the [actionability](./actionability.mdx) checks. Defaults to `false`.
- `modifiers` &#60;[List]\["Alt"|"Control"|"Meta"|"Shift"\]&#62; Modifier keys to press. Ensures that only these modifiers are pressed during the operation, and then restores current modifiers back. If not specified, currently pressed modifiers are used.
- `no_wait_after` &#60;[bool]&#62; Actions that initiate navigations are waiting for these navigations to happen and for pages to start loading. You can opt out of waiting via setting this flag. You would only need this option in the exceptional cases such as navigating to inaccessible pages. Defaults to `false`.
- `position` &#60;[Dict]&#62; A point to use relative to the top-left corner of element padding box. If not specified, uses some visible point of the element.
  - `x` &#60;[float]&#62;
  - `y` &#60;[float]&#62;
- `timeout` &#60;[float]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [browser_context.set_default_timeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [page.set_default_timeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.
- `trial` &#60;[bool]&#62; When set, this method only performs the [actionability](./actionability.mdx) checks and skips the action. Defaults to `false`. Useful to wait until the element is ready for the action without performing it.
- returns: &#60;[NoneType]&#62;

This method clicks an element matching `selector` by performing the following steps:
1. Find an element matching `selector`. If there is none, wait until a matching element is attached to the DOM.
1. Wait for [actionability](./actionability.mdx) checks on the matched element, unless `force` option is set. If the element is detached during the checks, the whole action is retried.
1. Scroll the element into view if needed.
1. Use [page.mouse](./api/class-page.mdx#page-mouse) to click in the center of the element, or the specified `position`.
1. Wait for initiated navigations to either succeed or fail, unless `no_wait_after` option is set.

When all steps combined have not finished during the specified `timeout`, this method throws a [TimeoutError]. Passing zero timeout disables this.

## frame.content() {#frame-content}
- returns: &#60;[str]&#62;

Gets the full HTML contents of the frame, including the doctype.

## frame.dblclick(selector, **kwargs) {#frame-dblclick}
- `selector` &#60;[str]&#62; A selector to search for element. If there are multiple elements satisfying the selector, the first will be used. See [working with selectors](./selectors.mdx) for more details.
- `button` &#60;"left"|"right"|"middle"&#62; Defaults to `left`.
- `delay` &#60;[float]&#62; Time to wait between `mousedown` and `mouseup` in milliseconds. Defaults to 0.
- `force` &#60;[bool]&#62; Whether to bypass the [actionability](./actionability.mdx) checks. Defaults to `false`.
- `modifiers` &#60;[List]\["Alt"|"Control"|"Meta"|"Shift"\]&#62; Modifier keys to press. Ensures that only these modifiers are pressed during the operation, and then restores current modifiers back. If not specified, currently pressed modifiers are used.
- `no_wait_after` &#60;[bool]&#62; Actions that initiate navigations are waiting for these navigations to happen and for pages to start loading. You can opt out of waiting via setting this flag. You would only need this option in the exceptional cases such as navigating to inaccessible pages. Defaults to `false`.
- `position` &#60;[Dict]&#62; A point to use relative to the top-left corner of element padding box. If not specified, uses some visible point of the element.
  - `x` &#60;[float]&#62;
  - `y` &#60;[float]&#62;
- `timeout` &#60;[float]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [browser_context.set_default_timeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [page.set_default_timeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.
- `trial` &#60;[bool]&#62; When set, this method only performs the [actionability](./actionability.mdx) checks and skips the action. Defaults to `false`. Useful to wait until the element is ready for the action without performing it.
- returns: &#60;[NoneType]&#62;

This method double clicks an element matching `selector` by performing the following steps:
1. Find an element matching `selector`. If there is none, wait until a matching element is attached to the DOM.
1. Wait for [actionability](./actionability.mdx) checks on the matched element, unless `force` option is set. If the element is detached during the checks, the whole action is retried.
1. Scroll the element into view if needed.
1. Use [page.mouse](./api/class-page.mdx#page-mouse) to double click in the center of the element, or the specified `position`.
1. Wait for initiated navigations to either succeed or fail, unless `no_wait_after` option is set. Note that if the first click of the `dblclick()` triggers a navigation event, this method will throw.

When all steps combined have not finished during the specified `timeout`, this method throws a [TimeoutError]. Passing zero timeout disables this.

:::note
`frame.dblclick()` dispatches two `click` events and a single `dblclick` event.
:::

## frame.dispatch_event(selector, type, **kwargs) {#frame-dispatch-event}
- `selector` &#60;[str]&#62; A selector to search for element. If there are multiple elements satisfying the selector, the first will be used. See [working with selectors](./selectors.mdx) for more details.
- `type` &#60;[str]&#62; DOM event type: `"click"`, `"dragstart"`, etc.
- `event_init` &#60;[EvaluationArgument]&#62; Optional event-specific initialization properties.
- `timeout` &#60;[float]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [browser_context.set_default_timeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [page.set_default_timeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.
- returns: &#60;[NoneType]&#62;

The snippet below dispatches the `click` event on the element. Regardless of the visibility state of the element, `click` is dispatched. This is equivalent to calling [element.click()](https://developer.mozilla.org/en-US/docs/Web/API/HTMLElement/click).

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
frame.dispatch_event("button#submit", "click")
```

</TabItem>
<TabItem value="async">

```py
await frame.dispatch_event("button#submit", "click")
```

</TabItem>
</Tabs>

Under the hood, it creates an instance of an event based on the given `type`, initializes it with `event_init` properties and dispatches it on the element. Events are `composed`, `cancelable` and bubble by default.

Since `event_init` is event-specific, please refer to the events documentation for the lists of initial properties:
* [DragEvent](https://developer.mozilla.org/en-US/docs/Web/API/DragEvent/DragEvent)
* [FocusEvent](https://developer.mozilla.org/en-US/docs/Web/API/FocusEvent/FocusEvent)
* [KeyboardEvent](https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent/KeyboardEvent)
* [MouseEvent](https://developer.mozilla.org/en-US/docs/Web/API/MouseEvent/MouseEvent)
* [PointerEvent](https://developer.mozilla.org/en-US/docs/Web/API/PointerEvent/PointerEvent)
* [TouchEvent](https://developer.mozilla.org/en-US/docs/Web/API/TouchEvent/TouchEvent)
* [Event](https://developer.mozilla.org/en-US/docs/Web/API/Event/Event)

You can also specify `JSHandle` as the property value if you want live objects to be passed into the event:

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
# note you can only create data_transfer in chromium and firefox
data_transfer = frame.evaluate_handle("new DataTransfer()")
frame.dispatch_event("#source", "dragstart", { "dataTransfer": data_transfer })
```

</TabItem>
<TabItem value="async">

```py
# note you can only create data_transfer in chromium and firefox
data_transfer = await frame.evaluate_handle("new DataTransfer()")
await frame.dispatch_event("#source", "dragstart", { "dataTransfer": data_transfer })
```

</TabItem>
</Tabs>

## frame.eval_on_selector(selector, expression, **kwargs) {#frame-eval-on-selector}
- `selector` &#60;[str]&#62; A selector to query for. See [working with selectors](./selectors.mdx) for more details.
- `expression` &#60;[str]&#62; JavaScript expression to be evaluated in the browser context. If it looks like a function declaration, it is interpreted as a function. Otherwise, evaluated as an expression.
- `arg` &#60;[EvaluationArgument]&#62; Optional argument to pass to `expression`.
- returns: &#60;[Serializable]&#62;

Returns the return value of `expression`.

The method finds an element matching the specified selector within the frame and passes it as a first argument to `expression`. See [Working with selectors](./selectors.mdx) for more details. If no elements match the selector, the method throws an error.

If `expression` returns a [Promise], then [frame.eval_on_selector(selector, expression, **kwargs)](./api/class-frame.mdx#frame-eval-on-selector) would wait for the promise to resolve and return its value.

Examples:

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
search_value = frame.eval_on_selector("#search", "el => el.value")
preload_href = frame.eval_on_selector("link[rel=preload]", "el => el.href")
html = frame.eval_on_selector(".main-container", "(e, suffix) => e.outerHTML + suffix", "hello")
```

</TabItem>
<TabItem value="async">

```py
search_value = await frame.eval_on_selector("#search", "el => el.value")
preload_href = await frame.eval_on_selector("link[rel=preload]", "el => el.href")
html = await frame.eval_on_selector(".main-container", "(e, suffix) => e.outerHTML + suffix", "hello")
```

</TabItem>
</Tabs>

## frame.eval_on_selector_all(selector, expression, **kwargs) {#frame-eval-on-selector-all}
- `selector` &#60;[str]&#62; A selector to query for. See [working with selectors](./selectors.mdx) for more details.
- `expression` &#60;[str]&#62; JavaScript expression to be evaluated in the browser context. If it looks like a function declaration, it is interpreted as a function. Otherwise, evaluated as an expression.
- `arg` &#60;[EvaluationArgument]&#62; Optional argument to pass to `expression`.
- returns: &#60;[Serializable]&#62;

Returns the return value of `expression`.

The method finds all elements matching the specified selector within the frame and passes an array of matched elements as a first argument to `expression`. See [Working with selectors](./selectors.mdx) for more details.

If `expression` returns a [Promise], then [frame.eval_on_selector_all(selector, expression, **kwargs)](./api/class-frame.mdx#frame-eval-on-selector-all) would wait for the promise to resolve and return its value.

Examples:

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
divs_counts = frame.eval_on_selector_all("div", "(divs, min) => divs.length >= min", 10)
```

</TabItem>
<TabItem value="async">

```py
divs_counts = await frame.eval_on_selector_all("div", "(divs, min) => divs.length >= min", 10)
```

</TabItem>
</Tabs>

## frame.evaluate(expression, **kwargs) {#frame-evaluate}
- `expression` &#60;[str]&#62; JavaScript expression to be evaluated in the browser context. If it looks like a function declaration, it is interpreted as a function. Otherwise, evaluated as an expression.
- `arg` &#60;[EvaluationArgument]&#62; Optional argument to pass to `expression`.
- returns: &#60;[Serializable]&#62;

Returns the return value of `expression`.

If the function passed to the [frame.evaluate(expression, **kwargs)](./api/class-frame.mdx#frame-evaluate) returns a [Promise], then [frame.evaluate(expression, **kwargs)](./api/class-frame.mdx#frame-evaluate) would wait for the promise to resolve and return its value.

If the function passed to the [frame.evaluate(expression, **kwargs)](./api/class-frame.mdx#frame-evaluate) returns a non-[Serializable] value, then [frame.evaluate(expression, **kwargs)](./api/class-frame.mdx#frame-evaluate) returns `undefined`. Playwright also supports transferring some additional values that are not serializable by `JSON`: `-0`, `NaN`, `Infinity`, `-Infinity`.

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
result = frame.evaluate("([x, y]) => Promise.resolve(x * y)", [7, 8])
print(result) # prints "56"
```

</TabItem>
<TabItem value="async">

```py
result = await frame.evaluate("([x, y]) => Promise.resolve(x * y)", [7, 8])
print(result) # prints "56"
```

</TabItem>
</Tabs>

A string can also be passed in instead of a function.

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
print(frame.evaluate("1 + 2")) # prints "3"
x = 10
print(frame.evaluate(f"1 + {x}")) # prints "11"
```

</TabItem>
<TabItem value="async">

```py
print(await frame.evaluate("1 + 2")) # prints "3"
x = 10
print(await frame.evaluate(f"1 + {x}")) # prints "11"
```

</TabItem>
</Tabs>

[ElementHandle] instances can be passed as an argument to the [frame.evaluate(expression, **kwargs)](./api/class-frame.mdx#frame-evaluate):

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
body_handle = frame.query_selector("body")
html = frame.evaluate("([body, suffix]) => body.innerHTML + suffix", [body_handle, "hello"])
body_handle.dispose()
```

</TabItem>
<TabItem value="async">

```py
body_handle = await frame.query_selector("body")
html = await frame.evaluate("([body, suffix]) => body.innerHTML + suffix", [body_handle, "hello"])
await body_handle.dispose()
```

</TabItem>
</Tabs>

## frame.evaluate_handle(expression, **kwargs) {#frame-evaluate-handle}
- `expression` &#60;[str]&#62; JavaScript expression to be evaluated in the browser context. If it looks like a function declaration, it is interpreted as a function. Otherwise, evaluated as an expression.
- `arg` &#60;[EvaluationArgument]&#62; Optional argument to pass to `expression`.
- returns: &#60;[JSHandle]&#62;

Returns the return value of `expression` as a [JSHandle].

The only difference between [frame.evaluate(expression, **kwargs)](./api/class-frame.mdx#frame-evaluate) and [frame.evaluate_handle(expression, **kwargs)](./api/class-frame.mdx#frame-evaluate-handle) is that [frame.evaluate_handle(expression, **kwargs)](./api/class-frame.mdx#frame-evaluate-handle) returns [JSHandle].

If the function, passed to the [frame.evaluate_handle(expression, **kwargs)](./api/class-frame.mdx#frame-evaluate-handle), returns a [Promise], then [frame.evaluate_handle(expression, **kwargs)](./api/class-frame.mdx#frame-evaluate-handle) would wait for the promise to resolve and return its value.

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
a_window_handle = frame.evaluate_handle("Promise.resolve(window)")
a_window_handle # handle for the window object.
```

</TabItem>
<TabItem value="async">

```py
a_window_handle = await frame.evaluate_handle("Promise.resolve(window)")
a_window_handle # handle for the window object.
```

</TabItem>
</Tabs>

A string can also be passed in instead of a function.

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
a_handle = page.evaluate_handle("document") # handle for the "document"
```

</TabItem>
<TabItem value="async">

```py
a_handle = await page.evaluate_handle("document") # handle for the "document"
```

</TabItem>
</Tabs>

[JSHandle] instances can be passed as an argument to the [frame.evaluate_handle(expression, **kwargs)](./api/class-frame.mdx#frame-evaluate-handle):

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
a_handle = page.evaluate_handle("document.body")
result_handle = page.evaluate_handle("body => body.innerHTML", a_handle)
print(result_handle.json_value())
result_handle.dispose()
```

</TabItem>
<TabItem value="async">

```py
a_handle = await page.evaluate_handle("document.body")
result_handle = await page.evaluate_handle("body => body.innerHTML", a_handle)
print(await result_handle.json_value())
await result_handle.dispose()
```

</TabItem>
</Tabs>

## frame.expect_navigation(**kwargs) {#frame-wait-for-navigation}
- `timeout` &#60;[float]&#62; Maximum operation time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [browser_context.set_default_navigation_timeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-navigation-timeout), [browser_context.set_default_timeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout), [page.set_default_navigation_timeout(timeout)](./api/class-page.mdx#page-set-default-navigation-timeout) or [page.set_default_timeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.
- `url` &#60;[str]|[Pattern]|[Callable]\[[URL]\]:[bool]&#62; A glob pattern, regex pattern or predicate receiving [URL] to match while waiting for the navigation.
- `wait_until` &#60;"load"|"domcontentloaded"|"networkidle"&#62; When to consider operation succeeded, defaults to `load`. Events can be either:
  * `'domcontentloaded'` - consider operation to be finished when the `DOMContentLoaded` event is fired.
  * `'load'` - consider operation to be finished when the `load` event is fired.
  * `'networkidle'` - consider operation to be finished when there are no network connections for at least `500` ms.
- returns: &#60;[EventContextManager]\[[Response]\]&#62;

Waits for the frame navigation and returns the main resource response. In case of multiple redirects, the navigation will resolve with the response of the last redirect. In case of navigation to a different anchor or navigation due to History API usage, the navigation will resolve with `null`.

This method waits for the frame to navigate to a new URL. It is useful for when you run code which will indirectly cause the frame to navigate. Consider this example:

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
with frame.expect_navigation():
    frame.click("a.delayed-navigation") # clicking the link will indirectly cause a navigation
# Resolves after navigation has finished
```

</TabItem>
<TabItem value="async">

```py
async with frame.expect_navigation():
    await frame.click("a.delayed-navigation") # clicking the link will indirectly cause a navigation
# Resolves after navigation has finished
```

</TabItem>
</Tabs>

:::note
Usage of the [History API](https://developer.mozilla.org/en-US/docs/Web/API/History_API) to change the URL is considered a navigation.
:::

## frame.fill(selector, value, **kwargs) {#frame-fill}
- `selector` &#60;[str]&#62; A selector to search for element. If there are multiple elements satisfying the selector, the first will be used. See [working with selectors](./selectors.mdx) for more details.
- `value` &#60;[str]&#62; Value to fill for the `<input>`, `<textarea>` or `[contenteditable]` element.
- `no_wait_after` &#60;[bool]&#62; Actions that initiate navigations are waiting for these navigations to happen and for pages to start loading. You can opt out of waiting via setting this flag. You would only need this option in the exceptional cases such as navigating to inaccessible pages. Defaults to `false`.
- `timeout` &#60;[float]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [browser_context.set_default_timeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [page.set_default_timeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.
- returns: &#60;[NoneType]&#62;

This method waits for an element matching `selector`, waits for [actionability](./actionability.mdx) checks, focuses the element, fills it and triggers an `input` event after filling. Note that you can pass an empty string to clear the input field.

If the target element is not an `<input>`, `<textarea>` or `[contenteditable]` element, this method throws an error. However, if the element is inside the `<label>` element that has an associated [control](https://developer.mozilla.org/en-US/docs/Web/API/HTMLLabelElement/control), the control will be filled instead.

To send fine-grained keyboard events, use [frame.type(selector, text, **kwargs)](./api/class-frame.mdx#frame-type).

## frame.focus(selector, **kwargs) {#frame-focus}
- `selector` &#60;[str]&#62; A selector to search for element. If there are multiple elements satisfying the selector, the first will be used. See [working with selectors](./selectors.mdx) for more details.
- `timeout` &#60;[float]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [browser_context.set_default_timeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [page.set_default_timeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.
- returns: &#60;[NoneType]&#62;

This method fetches an element with `selector` and focuses it. If there's no element matching `selector`, the method waits until a matching element appears in the DOM.

## frame.frame_element() {#frame-frame-element}
- returns: &#60;[ElementHandle]&#62;

Returns the `frame` or `iframe` element handle which corresponds to this frame.

This is an inverse of [element_handle.content_frame()](./api/class-elementhandle.mdx#element-handle-content-frame). Note that returned handle actually belongs to the parent frame.

This method throws an error if the frame has been detached before `frameElement()` returns.

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
frame_element = frame.frame_element()
content_frame = frame_element.content_frame()
assert frame == content_frame
```

</TabItem>
<TabItem value="async">

```py
frame_element = await frame.frame_element()
content_frame = await frame_element.content_frame()
assert frame == content_frame
```

</TabItem>
</Tabs>

## frame.get_attribute(selector, name, **kwargs) {#frame-get-attribute}
- `selector` &#60;[str]&#62; A selector to search for element. If there are multiple elements satisfying the selector, the first will be used. See [working with selectors](./selectors.mdx) for more details.
- `name` &#60;[str]&#62; Attribute name to get the value for.
- `timeout` &#60;[float]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [browser_context.set_default_timeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [page.set_default_timeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.
- returns: &#60;[NoneType]|[str]&#62;

Returns element attribute value.

## frame.goto(url, **kwargs) {#frame-goto}
- `url` &#60;[str]&#62; URL to navigate frame to. The url should include scheme, e.g. `https://`.
- `referer` &#60;[str]&#62; Referer header value. If provided it will take preference over the referer header value set by [page.set_extra_http_headers(headers)](./api/class-page.mdx#page-set-extra-http-headers).
- `timeout` &#60;[float]&#62; Maximum operation time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [browser_context.set_default_navigation_timeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-navigation-timeout), [browser_context.set_default_timeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout), [page.set_default_navigation_timeout(timeout)](./api/class-page.mdx#page-set-default-navigation-timeout) or [page.set_default_timeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.
- `wait_until` &#60;"load"|"domcontentloaded"|"networkidle"&#62; When to consider operation succeeded, defaults to `load`. Events can be either:
  * `'domcontentloaded'` - consider operation to be finished when the `DOMContentLoaded` event is fired.
  * `'load'` - consider operation to be finished when the `load` event is fired.
  * `'networkidle'` - consider operation to be finished when there are no network connections for at least `500` ms.
- returns: &#60;[NoneType]|[Response]&#62;

Returns the main resource response. In case of multiple redirects, the navigation will resolve with the response of the last redirect.

`frame.goto` will throw an error if:
* there's an SSL error (e.g. in case of self-signed certificates).
* target URL is invalid.
* the `timeout` is exceeded during navigation.
* the remote server does not respond or is unreachable.
* the main resource failed to load.

`frame.goto` will not throw an error when any valid HTTP status code is returned by the remote server, including 404 "Not Found" and 500 "Internal Server Error".  The status code for such responses can be retrieved by calling [response.status](./api/class-response.mdx#response-status).

:::note
`frame.goto` either throws an error or returns a main resource response. The only exceptions are navigation to `about:blank` or navigation to the same URL with a different hash, which would succeed and return `null`.
:::

:::note
Headless mode doesn't support navigation to a PDF document. See the [upstream issue](https://bugs.chromium.org/p/chromium/issues/detail?id=761295).
:::

## frame.hover(selector, **kwargs) {#frame-hover}
- `selector` &#60;[str]&#62; A selector to search for element. If there are multiple elements satisfying the selector, the first will be used. See [working with selectors](./selectors.mdx) for more details.
- `force` &#60;[bool]&#62; Whether to bypass the [actionability](./actionability.mdx) checks. Defaults to `false`.
- `modifiers` &#60;[List]\["Alt"|"Control"|"Meta"|"Shift"\]&#62; Modifier keys to press. Ensures that only these modifiers are pressed during the operation, and then restores current modifiers back. If not specified, currently pressed modifiers are used.
- `position` &#60;[Dict]&#62; A point to use relative to the top-left corner of element padding box. If not specified, uses some visible point of the element.
  - `x` &#60;[float]&#62;
  - `y` &#60;[float]&#62;
- `timeout` &#60;[float]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [browser_context.set_default_timeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [page.set_default_timeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.
- `trial` &#60;[bool]&#62; When set, this method only performs the [actionability](./actionability.mdx) checks and skips the action. Defaults to `false`. Useful to wait until the element is ready for the action without performing it.
- returns: &#60;[NoneType]&#62;

This method hovers over an element matching `selector` by performing the following steps:
1. Find an element matching `selector`. If there is none, wait until a matching element is attached to the DOM.
1. Wait for [actionability](./actionability.mdx) checks on the matched element, unless `force` option is set. If the element is detached during the checks, the whole action is retried.
1. Scroll the element into view if needed.
1. Use [page.mouse](./api/class-page.mdx#page-mouse) to hover over the center of the element, or the specified `position`.
1. Wait for initiated navigations to either succeed or fail, unless `noWaitAfter` option is set.

When all steps combined have not finished during the specified `timeout`, this method throws a [TimeoutError]. Passing zero timeout disables this.

## frame.inner_html(selector, **kwargs) {#frame-inner-html}
- `selector` &#60;[str]&#62; A selector to search for element. If there are multiple elements satisfying the selector, the first will be used. See [working with selectors](./selectors.mdx) for more details.
- `timeout` &#60;[float]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [browser_context.set_default_timeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [page.set_default_timeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.
- returns: &#60;[str]&#62;

Returns `element.innerHTML`.

## frame.inner_text(selector, **kwargs) {#frame-inner-text}
- `selector` &#60;[str]&#62; A selector to search for element. If there are multiple elements satisfying the selector, the first will be used. See [working with selectors](./selectors.mdx) for more details.
- `timeout` &#60;[float]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [browser_context.set_default_timeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [page.set_default_timeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.
- returns: &#60;[str]&#62;

Returns `element.innerText`.

## frame.is_checked(selector, **kwargs) {#frame-is-checked}
- `selector` &#60;[str]&#62; A selector to search for element. If there are multiple elements satisfying the selector, the first will be used. See [working with selectors](./selectors.mdx) for more details.
- `timeout` &#60;[float]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [browser_context.set_default_timeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [page.set_default_timeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.
- returns: &#60;[bool]&#62;

Returns whether the element is checked. Throws if the element is not a checkbox or radio input.

## frame.is_detached() {#frame-is-detached}
- returns: &#60;[bool]&#62;

Returns `true` if the frame has been detached, or `false` otherwise.

## frame.is_disabled(selector, **kwargs) {#frame-is-disabled}
- `selector` &#60;[str]&#62; A selector to search for element. If there are multiple elements satisfying the selector, the first will be used. See [working with selectors](./selectors.mdx) for more details.
- `timeout` &#60;[float]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [browser_context.set_default_timeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [page.set_default_timeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.
- returns: &#60;[bool]&#62;

Returns whether the element is disabled, the opposite of [enabled](./actionability.mdx#enabled).

## frame.is_editable(selector, **kwargs) {#frame-is-editable}
- `selector` &#60;[str]&#62; A selector to search for element. If there are multiple elements satisfying the selector, the first will be used. See [working with selectors](./selectors.mdx) for more details.
- `timeout` &#60;[float]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [browser_context.set_default_timeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [page.set_default_timeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.
- returns: &#60;[bool]&#62;

Returns whether the element is [editable](./actionability.mdx#editable).

## frame.is_enabled(selector, **kwargs) {#frame-is-enabled}
- `selector` &#60;[str]&#62; A selector to search for element. If there are multiple elements satisfying the selector, the first will be used. See [working with selectors](./selectors.mdx) for more details.
- `timeout` &#60;[float]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [browser_context.set_default_timeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [page.set_default_timeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.
- returns: &#60;[bool]&#62;

Returns whether the element is [enabled](./actionability.mdx#enabled).

## frame.is_hidden(selector, **kwargs) {#frame-is-hidden}
- `selector` &#60;[str]&#62; A selector to search for element. If there are multiple elements satisfying the selector, the first will be used. See [working with selectors](./selectors.mdx) for more details.
- `timeout` &#60;[float]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [browser_context.set_default_timeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [page.set_default_timeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.
- returns: &#60;[bool]&#62;

Returns whether the element is hidden, the opposite of [visible](./actionability.mdx#visible).  `selector` that does not match any elements is considered hidden.

## frame.is_visible(selector, **kwargs) {#frame-is-visible}
- `selector` &#60;[str]&#62; A selector to search for element. If there are multiple elements satisfying the selector, the first will be used. See [working with selectors](./selectors.mdx) for more details.
- `timeout` &#60;[float]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [browser_context.set_default_timeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [page.set_default_timeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.
- returns: &#60;[bool]&#62;

Returns whether the element is [visible](./actionability.mdx#visible). `selector` that does not match any elements is considered not visible.

## frame.name {#frame-name}
- returns: &#60;[str]&#62;

Returns frame's name attribute as specified in the tag.

If the name is empty, returns the id attribute instead.

:::note
This value is calculated once when the frame is created, and will not update if the attribute is changed later.
:::

## frame.page {#frame-page}
- returns: &#60;[Page]&#62;

Returns the page containing this frame.

## frame.parent_frame {#frame-parent-frame}
- returns: &#60;[NoneType]|[Frame]&#62;

Parent frame, if any. Detached frames and main frames return `null`.

## frame.press(selector, key, **kwargs) {#frame-press}
- `selector` &#60;[str]&#62; A selector to search for element. If there are multiple elements satisfying the selector, the first will be used. See [working with selectors](./selectors.mdx) for more details.
- `key` &#60;[str]&#62; Name of the key to press or a character to generate, such as `ArrowLeft` or `a`.
- `delay` &#60;[float]&#62; Time to wait between `keydown` and `keyup` in milliseconds. Defaults to 0.
- `no_wait_after` &#60;[bool]&#62; Actions that initiate navigations are waiting for these navigations to happen and for pages to start loading. You can opt out of waiting via setting this flag. You would only need this option in the exceptional cases such as navigating to inaccessible pages. Defaults to `false`.
- `timeout` &#60;[float]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [browser_context.set_default_timeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [page.set_default_timeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.
- returns: &#60;[NoneType]&#62;

`key` can specify the intended [keyboardEvent.key](https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent/key) value or a single character to generate the text for. A superset of the `key` values can be found [here](https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent/key/Key_Values). Examples of the keys are:

`F1` - `F12`, `Digit0`- `Digit9`, `KeyA`- `KeyZ`, `Backquote`, `Minus`, `Equal`, `Backslash`, `Backspace`, `Tab`, `Delete`, `Escape`, `ArrowDown`, `End`, `Enter`, `Home`, `Insert`, `PageDown`, `PageUp`, `ArrowRight`, `ArrowUp`, etc.

Following modification shortcuts are also supported: `Shift`, `Control`, `Alt`, `Meta`, `ShiftLeft`.

Holding down `Shift` will type the text that corresponds to the `key` in the upper case.

If `key` is a single character, it is case-sensitive, so the values `a` and `A` will generate different respective texts.

Shortcuts such as `key: "Control+o"` or `key: "Control+Shift+T"` are supported as well. When specified with the modifier, modifier is pressed and being held while the subsequent key is being pressed.

## frame.query_selector(selector) {#frame-query-selector}
- `selector` &#60;[str]&#62; A selector to query for. See [working with selectors](./selectors.mdx) for more details.
- returns: &#60;[NoneType]|[ElementHandle]&#62;

Returns the ElementHandle pointing to the frame element.

The method finds an element matching the specified selector within the frame. See [Working with selectors](./selectors.mdx) for more details. If no elements match the selector, returns `null`.

## frame.query_selector_all(selector) {#frame-query-selector-all}
- `selector` &#60;[str]&#62; A selector to query for. See [working with selectors](./selectors.mdx) for more details.
- returns: &#60;[List]\[[ElementHandle]\]&#62;

Returns the ElementHandles pointing to the frame elements.

The method finds all elements matching the specified selector within the frame. See [Working with selectors](./selectors.mdx) for more details. If no elements match the selector, returns empty array.

## frame.select_option(selector, **kwargs) {#frame-select-option}
- `selector` &#60;[str]&#62; A selector to query for. See [working with selectors](./selectors.mdx) for more details.
- `no_wait_after` &#60;[bool]&#62; Actions that initiate navigations are waiting for these navigations to happen and for pages to start loading. You can opt out of waiting via setting this flag. You would only need this option in the exceptional cases such as navigating to inaccessible pages. Defaults to `false`.
- `timeout` &#60;[float]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [browser_context.set_default_timeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [page.set_default_timeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.
- `element` &#60;[ElementHandle]|[List]\[[ElementHandle]\]&#62; Option elements to select. Optional.
- `index` &#60;[int]|[List]\[[int]\]&#62; Options to select by index. Optional.
- `value` &#60;[str]|[List]\[[str]\]&#62; Options to select by value. If the `<select>` has the `multiple` attribute, all given options are selected, otherwise only the first option matching one of the passed options is selected. Optional.
- `label` &#60;[str]|[List]\[[str]\]&#62; Options to select by label. If the `<select>` has the `multiple` attribute, all given options are selected, otherwise only the first option matching one of the passed options is selected. Optional.
- returns: &#60;[List]\[[str]\]&#62;

This method waits for an element matching `selector`, waits for [actionability](./actionability.mdx) checks, waits until all specified options are present in the `<select>` element and selects these options.

If the target element is not a `<select>` element, this method throws an error. However, if the element is inside the `<label>` element that has an associated [control](https://developer.mozilla.org/en-US/docs/Web/API/HTMLLabelElement/control), the control will be used instead.

Returns the array of option values that have been successfully selected.

Triggers a `change` and `input` event once all the provided options have been selected.

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
# single selection matching the value
frame.select_option("select#colors", "blue")
# single selection matching both the label
frame.select_option("select#colors", label="blue")
# multiple selection
frame.select_option("select#colors", value=["red", "green", "blue"])
```

</TabItem>
<TabItem value="async">

```py
# single selection matching the value
await frame.select_option("select#colors", "blue")
# single selection matching the label
await frame.select_option("select#colors", label="blue")
# multiple selection
await frame.select_option("select#colors", value=["red", "green", "blue"])
```

</TabItem>
</Tabs>

## frame.set_content(html, **kwargs) {#frame-set-content}
- `html` &#60;[str]&#62; HTML markup to assign to the page.
- `timeout` &#60;[float]&#62; Maximum operation time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [browser_context.set_default_navigation_timeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-navigation-timeout), [browser_context.set_default_timeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout), [page.set_default_navigation_timeout(timeout)](./api/class-page.mdx#page-set-default-navigation-timeout) or [page.set_default_timeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.
- `wait_until` &#60;"load"|"domcontentloaded"|"networkidle"&#62; When to consider operation succeeded, defaults to `load`. Events can be either:
  * `'domcontentloaded'` - consider operation to be finished when the `DOMContentLoaded` event is fired.
  * `'load'` - consider operation to be finished when the `load` event is fired.
  * `'networkidle'` - consider operation to be finished when there are no network connections for at least `500` ms.
- returns: &#60;[NoneType]&#62;

## frame.set_input_files(selector, files, **kwargs) {#frame-set-input-files}
- `selector` &#60;[str]&#62; A selector to search for element. If there are multiple elements satisfying the selector, the first will be used. See [working with selectors](./selectors.mdx) for more details.
- `files` &#60;[Union]\[[str], [pathlib.Path]\]|[List]\[[Union]\[[str], [pathlib.Path]\]\]|[Dict]|[List]\[[Dict]\]&#62;
  - `name` &#60;[str]&#62; File name
  - `mimeType` &#60;[str]&#62; File type
  - `buffer` &#60;[bytes]&#62; File content
- `no_wait_after` &#60;[bool]&#62; Actions that initiate navigations are waiting for these navigations to happen and for pages to start loading. You can opt out of waiting via setting this flag. You would only need this option in the exceptional cases such as navigating to inaccessible pages. Defaults to `false`.
- `timeout` &#60;[float]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [browser_context.set_default_timeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [page.set_default_timeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.
- returns: &#60;[NoneType]&#62;

This method expects `selector` to point to an [input element](https://developer.mozilla.org/en-US/docs/Web/HTML/Element/input).

Sets the value of the file input to these file paths or files. If some of the `filePaths` are relative paths, then they are resolved relative to the the current working directory. For empty array, clears the selected files.

## frame.tap(selector, **kwargs) {#frame-tap}
- `selector` &#60;[str]&#62; A selector to search for element. If there are multiple elements satisfying the selector, the first will be used. See [working with selectors](./selectors.mdx) for more details.
- `force` &#60;[bool]&#62; Whether to bypass the [actionability](./actionability.mdx) checks. Defaults to `false`.
- `modifiers` &#60;[List]\["Alt"|"Control"|"Meta"|"Shift"\]&#62; Modifier keys to press. Ensures that only these modifiers are pressed during the operation, and then restores current modifiers back. If not specified, currently pressed modifiers are used.
- `no_wait_after` &#60;[bool]&#62; Actions that initiate navigations are waiting for these navigations to happen and for pages to start loading. You can opt out of waiting via setting this flag. You would only need this option in the exceptional cases such as navigating to inaccessible pages. Defaults to `false`.
- `position` &#60;[Dict]&#62; A point to use relative to the top-left corner of element padding box. If not specified, uses some visible point of the element.
  - `x` &#60;[float]&#62;
  - `y` &#60;[float]&#62;
- `timeout` &#60;[float]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [browser_context.set_default_timeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [page.set_default_timeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.
- `trial` &#60;[bool]&#62; When set, this method only performs the [actionability](./actionability.mdx) checks and skips the action. Defaults to `false`. Useful to wait until the element is ready for the action without performing it.
- returns: &#60;[NoneType]&#62;

This method taps an element matching `selector` by performing the following steps:
1. Find an element matching `selector`. If there is none, wait until a matching element is attached to the DOM.
1. Wait for [actionability](./actionability.mdx) checks on the matched element, unless `force` option is set. If the element is detached during the checks, the whole action is retried.
1. Scroll the element into view if needed.
1. Use [page.touchscreen](./api/class-page.mdx#page-touchscreen) to tap the center of the element, or the specified `position`.
1. Wait for initiated navigations to either succeed or fail, unless `no_wait_after` option is set.

When all steps combined have not finished during the specified `timeout`, this method throws a [TimeoutError]. Passing zero timeout disables this.

:::note
`frame.tap()` requires that the `hasTouch` option of the browser context be set to true.
:::

## frame.text_content(selector, **kwargs) {#frame-text-content}
- `selector` &#60;[str]&#62; A selector to search for element. If there are multiple elements satisfying the selector, the first will be used. See [working with selectors](./selectors.mdx) for more details.
- `timeout` &#60;[float]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [browser_context.set_default_timeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [page.set_default_timeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.
- returns: &#60;[NoneType]|[str]&#62;

Returns `element.textContent`.

## frame.title() {#frame-title}
- returns: &#60;[str]&#62;

Returns the page title.

## frame.type(selector, text, **kwargs) {#frame-type}
- `selector` &#60;[str]&#62; A selector to search for element. If there are multiple elements satisfying the selector, the first will be used. See [working with selectors](./selectors.mdx) for more details.
- `text` &#60;[str]&#62; A text to type into a focused element.
- `delay` &#60;[float]&#62; Time to wait between key presses in milliseconds. Defaults to 0.
- `no_wait_after` &#60;[bool]&#62; Actions that initiate navigations are waiting for these navigations to happen and for pages to start loading. You can opt out of waiting via setting this flag. You would only need this option in the exceptional cases such as navigating to inaccessible pages. Defaults to `false`.
- `timeout` &#60;[float]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [browser_context.set_default_timeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [page.set_default_timeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.
- returns: &#60;[NoneType]&#62;

Sends a `keydown`, `keypress`/`input`, and `keyup` event for each character in the text. `frame.type` can be used to send fine-grained keyboard events. To fill values in form fields, use [frame.fill(selector, value, **kwargs)](./api/class-frame.mdx#frame-fill).

To press a special key, like `Control` or `ArrowDown`, use [keyboard.press(key, **kwargs)](./api/class-keyboard.mdx#keyboard-press).

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
frame.type("#mytextarea", "hello") # types instantly
frame.type("#mytextarea", "world", delay=100) # types slower, like a user
```

</TabItem>
<TabItem value="async">

```py
await frame.type("#mytextarea", "hello") # types instantly
await frame.type("#mytextarea", "world", delay=100) # types slower, like a user
```

</TabItem>
</Tabs>

## frame.uncheck(selector, **kwargs) {#frame-uncheck}
- `selector` &#60;[str]&#62; A selector to search for element. If there are multiple elements satisfying the selector, the first will be used. See [working with selectors](./selectors.mdx) for more details.
- `force` &#60;[bool]&#62; Whether to bypass the [actionability](./actionability.mdx) checks. Defaults to `false`.
- `no_wait_after` &#60;[bool]&#62; Actions that initiate navigations are waiting for these navigations to happen and for pages to start loading. You can opt out of waiting via setting this flag. You would only need this option in the exceptional cases such as navigating to inaccessible pages. Defaults to `false`.
- `position` &#60;[Dict]&#62; A point to use relative to the top-left corner of element padding box. If not specified, uses some visible point of the element.
  - `x` &#60;[float]&#62;
  - `y` &#60;[float]&#62;
- `timeout` &#60;[float]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [browser_context.set_default_timeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [page.set_default_timeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.
- `trial` &#60;[bool]&#62; When set, this method only performs the [actionability](./actionability.mdx) checks and skips the action. Defaults to `false`. Useful to wait until the element is ready for the action without performing it.
- returns: &#60;[NoneType]&#62;

This method checks an element matching `selector` by performing the following steps:
1. Find an element matching `selector`. If there is none, wait until a matching element is attached to the DOM.
1. Ensure that matched element is a checkbox or a radio input. If not, this method throws. If the element is already unchecked, this method returns immediately.
1. Wait for [actionability](./actionability.mdx) checks on the matched element, unless `force` option is set. If the element is detached during the checks, the whole action is retried.
1. Scroll the element into view if needed.
1. Use [page.mouse](./api/class-page.mdx#page-mouse) to click in the center of the element.
1. Wait for initiated navigations to either succeed or fail, unless `no_wait_after` option is set.
1. Ensure that the element is now unchecked. If not, this method throws.

When all steps combined have not finished during the specified `timeout`, this method throws a [TimeoutError]. Passing zero timeout disables this.

## frame.url {#frame-url}
- returns: &#60;[str]&#62;

Returns frame's url.

## frame.wait_for_function(expression, **kwargs) {#frame-wait-for-function}
- `expression` &#60;[str]&#62; JavaScript expression to be evaluated in the browser context. If it looks like a function declaration, it is interpreted as a function. Otherwise, evaluated as an expression.
- `arg` &#60;[EvaluationArgument]&#62; Optional argument to pass to `expression`.
- `polling` &#60;[float]|"raf"&#62; If `polling` is `'raf'`, then `expression` is constantly executed in `requestAnimationFrame` callback. If `polling` is a number, then it is treated as an interval in milliseconds at which the function would be executed. Defaults to `raf`.
- `timeout` &#60;[float]&#62; maximum time to wait for in milliseconds. Defaults to `30000` (30 seconds). Pass `0` to disable timeout. The default value can be changed by using the [browser_context.set_default_timeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout).
- returns: &#60;[JSHandle]&#62;

Returns when the `expression` returns a truthy value, returns that value.

The [frame.wait_for_function(expression, **kwargs)](./api/class-frame.mdx#frame-wait-for-function) can be used to observe viewport size change:

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
from playwright.sync_api import sync_playwright

def run(playwright):
    webkit = playwright.webkit
    browser = webkit.launch()
    page = browser.new_page()
    page.evaluate("window.x = 0; setTimeout(() => { window.x = 100 }, 1000);")
    page.main_frame.wait_for_function("() => window.x > 0")
    browser.close()

with sync_playwright() as playwright:
    run(playwright)
```

</TabItem>
<TabItem value="async">

```py
import asyncio
from playwright.async_api import async_playwright

async def run(playwright):
    webkit = playwright.webkit
    browser = await webkit.launch()
    page = await browser.new_page()
    await page.evaluate("window.x = 0; setTimeout(() => { window.x = 100 }, 1000);")
    await page.main_frame.wait_for_function("() => window.x > 0")
    await browser.close()

async def main():
    async with async_playwright() as playwright:
        await run(playwright)
asyncio.run(main())
```

</TabItem>
</Tabs>

To pass an argument to the predicate of `frame.waitForFunction` function:

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
selector = ".foo"
frame.wait_for_function("selector => !!document.querySelector(selector)", selector)
```

</TabItem>
<TabItem value="async">

```py
selector = ".foo"
await frame.wait_for_function("selector => !!document.querySelector(selector)", selector)
```

</TabItem>
</Tabs>

## frame.wait_for_load_state(**kwargs) {#frame-wait-for-load-state}
- `state` &#60;"load"|"domcontentloaded"|"networkidle"&#62; Optional load state to wait for, defaults to `load`. If the state has been already reached while loading current document, the method resolves immediately. Can be one of:
  * `'load'` - wait for the `load` event to be fired.
  * `'domcontentloaded'` - wait for the `DOMContentLoaded` event to be fired.
  * `'networkidle'` - wait until there are no network connections for at least `500` ms.
- `timeout` &#60;[float]&#62; Maximum operation time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [browser_context.set_default_navigation_timeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-navigation-timeout), [browser_context.set_default_timeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout), [page.set_default_navigation_timeout(timeout)](./api/class-page.mdx#page-set-default-navigation-timeout) or [page.set_default_timeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.
- returns: &#60;[NoneType]&#62;

Waits for the required load state to be reached.

This returns when the frame reaches a required load state, `load` by default. The navigation must have been committed when this method is called. If current document has already reached the required state, resolves immediately.

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
frame.click("button") # click triggers navigation.
frame.wait_for_load_state() # the promise resolves after "load" event.
```

</TabItem>
<TabItem value="async">

```py
await frame.click("button") # click triggers navigation.
await frame.wait_for_load_state() # the promise resolves after "load" event.
```

</TabItem>
</Tabs>

## frame.wait_for_selector(selector, **kwargs) {#frame-wait-for-selector}
- `selector` &#60;[str]&#62; A selector to query for. See [working with selectors](./selectors.mdx) for more details.
- `state` &#60;"attached"|"detached"|"visible"|"hidden"&#62; Defaults to `'visible'`. Can be either:
  * `'attached'` - wait for element to be present in DOM.
  * `'detached'` - wait for element to not be present in DOM.
  * `'visible'` - wait for element to have non-empty bounding box and no `visibility:hidden`. Note that element without any content or with `display:none` has an empty bounding box and is not considered visible.
  * `'hidden'` - wait for element to be either detached from DOM, or have an empty bounding box or `visibility:hidden`. This is opposite to the `'visible'` option.
- `timeout` &#60;[float]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [browser_context.set_default_timeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [page.set_default_timeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.
- returns: &#60;[NoneType]|[ElementHandle]&#62;

Returns when element specified by selector satisfies `state` option. Returns `null` if waiting for `hidden` or `detached`.

Wait for the `selector` to satisfy `state` option (either appear/disappear from dom, or become visible/hidden). If at the moment of calling the method `selector` already satisfies the condition, the method will return immediately. If the selector doesn't satisfy the condition for the `timeout` milliseconds, the function will throw.

This method works across navigations:

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
from playwright.sync_api import sync_playwright

def run(playwright):
    chromium = playwright.chromium
    browser = chromium.launch()
    page = browser.new_page()
    for current_url in ["https://google.com", "https://bbc.com"]:
        page.goto(current_url, wait_until="domcontentloaded")
        element = page.main_frame.wait_for_selector("img")
        print("Loaded image: " + str(element.get_attribute("src")))
    browser.close()

with sync_playwright() as playwright:
    run(playwright)
```

</TabItem>
<TabItem value="async">

```py
import asyncio
from playwright.async_api import async_playwright

async def run(playwright):
    chromium = playwright.chromium
    browser = await chromium.launch()
    page = await browser.new_page()
    for current_url in ["https://google.com", "https://bbc.com"]:
        await page.goto(current_url, wait_until="domcontentloaded")
        element = await page.main_frame.wait_for_selector("img")
        print("Loaded image: " + str(await element.get_attribute("src")))
    await browser.close()

async def main():
    async with async_playwright() as playwright:
        await run(playwright)
asyncio.run(main())
```

</TabItem>
</Tabs>

## frame.wait_for_timeout(timeout) {#frame-wait-for-timeout}
- `timeout` &#60;[float]&#62; A timeout to wait for
- returns: &#60;[NoneType]&#62;

Waits for the given `timeout` in milliseconds.

Note that `frame.waitForTimeout()` should only be used for debugging. Tests using the timer in production are going to be flaky. Use signals such as network events, selectors becoming visible and others instead.

## frame.wait_for_url(url, **kwargs) {#frame-wait-for-url}
- `url` &#60;[str]|[Pattern]|[Callable]\[[URL]\]:[bool]&#62; A glob pattern, regex pattern or predicate receiving [URL] to match while waiting for the navigation.
- `timeout` &#60;[float]&#62; Maximum operation time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [browser_context.set_default_navigation_timeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-navigation-timeout), [browser_context.set_default_timeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout), [page.set_default_navigation_timeout(timeout)](./api/class-page.mdx#page-set-default-navigation-timeout) or [page.set_default_timeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.
- `wait_until` &#60;"load"|"domcontentloaded"|"networkidle"&#62; When to consider operation succeeded, defaults to `load`. Events can be either:
  * `'domcontentloaded'` - consider operation to be finished when the `DOMContentLoaded` event is fired.
  * `'load'` - consider operation to be finished when the `load` event is fired.
  * `'networkidle'` - consider operation to be finished when there are no network connections for at least `500` ms.
- returns: &#60;[NoneType]&#62;

Waits for the frame to navigate to the given URL.

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
frame.click("a.delayed-navigation") # clicking the link will indirectly cause a navigation
frame.wait_for_url("**/target.html")
```

</TabItem>
<TabItem value="async">

```py
await frame.click("a.delayed-navigation") # clicking the link will indirectly cause a navigation
await frame.wait_for_url("**/target.html")
```

</TabItem>
</Tabs>

[Accessibility]: ./api/class-accessibility.mdx "Accessibility"
[Browser]: ./api/class-browser.mdx "Browser"
[BrowserContext]: ./api/class-browsercontext.mdx "BrowserContext"
[BrowserType]: ./api/class-browsertype.mdx "BrowserType"
[CDPSession]: ./api/class-cdpsession.mdx "CDPSession"
[ConsoleMessage]: ./api/class-consolemessage.mdx "ConsoleMessage"
[Dialog]: ./api/class-dialog.mdx "Dialog"
[Download]: ./api/class-download.mdx "Download"
[ElementHandle]: ./api/class-elementhandle.mdx "ElementHandle"
[Error]: ./api/class-error.mdx "Error"
[FileChooser]: ./api/class-filechooser.mdx "FileChooser"
[Frame]: ./api/class-frame.mdx "Frame"
[JSHandle]: ./api/class-jshandle.mdx "JSHandle"
[Keyboard]: ./api/class-keyboard.mdx "Keyboard"
[Mouse]: ./api/class-mouse.mdx "Mouse"
[Page]: ./api/class-page.mdx "Page"
[Playwright]: ./api/class-playwright.mdx "Playwright"
[Request]: ./api/class-request.mdx "Request"
[Response]: ./api/class-response.mdx "Response"
[Route]: ./api/class-route.mdx "Route"
[Selectors]: ./api/class-selectors.mdx "Selectors"
[TimeoutError]: ./api/class-timeouterror.mdx "TimeoutError"
[Touchscreen]: ./api/class-touchscreen.mdx "Touchscreen"
[Tracing]: ./api/class-tracing.mdx "Tracing"
[Video]: ./api/class-video.mdx "Video"
[WebSocket]: ./api/class-websocket.mdx "WebSocket"
[Worker]: ./api/class-worker.mdx "Worker"
[Element]: https://developer.mozilla.org/en-US/docs/Web/API/element "Element"
[EvaluationArgument]: ./core-concepts.mdx#evaluation-argument "EvaluationArgument"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[iterator]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Iteration_protocols "Iterator"
[origin]: https://developer.mozilla.org/en-US/docs/Glossary/Origin "Origin"
[selector]: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Selectors "selector"
[Serializable]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/stringify#Description "Serializable"
[UIEvent.detail]: https://developer.mozilla.org/en-US/docs/Web/API/UIEvent/detail "UIEvent.detail"
[UnixTime]: https://en.wikipedia.org/wiki/Unix_time "Unix Time"
[xpath]: https://developer.mozilla.org/en-US/docs/Web/XPath "xpath"

[Any]: https://docs.python.org/3/library/typing.html#typing.Any "Any"
[bool]: https://docs.python.org/3/library/stdtypes.html "bool"
[bytes]: https://docs.python.org/3/library/stdtypes.html#bytes "bytes"
[Callable]: https://docs.python.org/3/library/typing.html#typing.Callable "Callable"
[EventContextManager]: https://docs.python.org/3/reference/datamodel.html#context-managers "Event context manager"
[EventEmitter]: https://pyee.readthedocs.io/en/latest/#pyee.BaseEventEmitter "EventEmitter"
[Exception]: https://docs.python.org/3/library/exceptions.html#Exception "Exception"
[Dict]: https://docs.python.org/3/library/typing.html#typing.Dict "Dict"
[float]: https://docs.python.org/3/library/stdtypes.html#numeric-types-int-float-complex "float"
[int]: https://docs.python.org/3/library/stdtypes.html#numeric-types-int-float-complex "int"
[List]: https://docs.python.org/3/library/typing.html#typing.List "List"
[NoneType]: https://docs.python.org/3/library/constants.html#None "None"
[Pattern]: https://docs.python.org/3/library/re.html "Pattern"
[URL]: https://en.wikipedia.org/wiki/URL "URL"
[pathlib.Path]: https://realpython.com/python-pathlib/ "pathlib.Path"
[str]: https://docs.python.org/3/library/stdtypes.html#text-sequence-type-str "str"
[Union]: https://docs.python.org/3/library/typing.html#typing.Union "Union"

[all available image tags]: https://mcr.microsoft.com/v2/playwright/tags/list "all available image tags"
[Docker Hub]: https://hub.docker.com/_/microsoft-playwright "Docker Hub"
[Dockerfile.focal]: https://github.com/microsoft/playwright/blob/master/utils/docker/Dockerfile.focal "Dockerfile.focal"